# cat-integration-tests

./: .gitignore  Makefile  README.md  env.sample.sh  environment.py  requirements.txt  run.sh  setup.cfg
archived/: Test_Stand.postman_collection.json
docs/adr/: 001-behave-tag-naming-convention.md  002-did-web-over-did-jwk.md  003-interim-two-config-test-strategy.md
features/: 00 Original Implementation Regression.feature  01 Authentication.feature  02 Self-Description Verification.feature  03 Self-Description Lifecycle.feature  04 Self-Description Upload.feature  05 Query.feature  06 Non-RDF Asset Creation.feature  99 Original Implementation Regression.feature
fixtures/schemas/: participant-requires-legalname.shacl.ttl
fixtures/unsigned/: gaiax-participant-minimal-ctx.vp.jsonld
fixtures/valid/: gaiax-participant-correct-type.vp.jsonld  gaiax-participant-correct-type.vp.signed.jsonld  gaiax-participant-legacy-type.vp.jsonld  gaiax-participant-legacy-type.vp.signed.jsonld  gaiax-participant.vp.jsonld  gaiax-participant.vp.signed.jsonld
fixtures/valid/default-only/: gaiax-participant-correct-type.vp.jsonld  gaiax-participant-correct-type.vp.signed.jsonld  gaiax-participant-legacy-type.vp.signed.jsonld
fixtures/valid/non-rdf/: config.yaml  contract.json  template.txt
scripts/: decode-did-jwk.py  generate-did-jwk.py
src/eu/xfsc/bdd/cat/: defaults.py  env.py
src/eu/xfsc/bdd/cat/components/: fc_server.py  keycloak.py
steps/: fc_server.py  keycloak.py  rest.py
