[metadata]
name = eu-xfsc-bdd-cat
version = 0.0.0

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find_namespace:

install_requires =
    eu-xfsc-bdd
    behave-html-formatter

[options.packages.find]
where = src

[options.package_data]
* =
    *.yaml
    py.typed

[options.extras_require]
dev =
    eu-xfsc-bdd[dev]

[isort]
known_typing=typing
known_xfsc=eu.xfsc
;suppress inspection for section "SpellCheckingInspection"
sections=FUTURE,TYPING,STDLIB,FIRSTPARTY,THIRDPARTY,XFSC,LOCALFOLDER

[coverage:run]
data_file=.coverage
branch=True
source=src,steps

[coverage:report]
fail_under=10
show_missing=True
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
    return core_schema.no_info_after_validator_function

[tool:pytest]
addopts = --strict-markers -m "not integration" -v --doctest-modules
markers =
    integration
testpaths = tests
filterwarnings =
    error
    ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC(.) datetime.datetime.fromtimestamp\(timestamp, datetime.UTC\).:DeprecationWarning:dateutil

# https://behave.readthedocs.io/en/latest/behave/#configuration-files
[behave.formatters]
html = behave_html_formatter:HTMLFormatter

[pylint.BASIC]
docstring-min-length=5

[pylint.FORMAT]
# Regexp for a line that is allowed to be longer than the limit.
ignore-long-lines=^\s*(# )?<?https?://\S+>?$|See `https://\S+`_

[pylint.MESSAGES CONTROL]
disable=
    fixme

[pylint.MASTER]
load-plugins=pylint_junit

[mypy]
strict = True
show_error_codes = True

[mypy-bash.*]
ignore_missing_imports = True

[mypy-behave.*]
ignore_missing_imports = True

[mypy-parse.*]
ignore_missing_imports = True

[mypy-parse_type.*]
ignore_missing_imports = True
